[package]
name = "bender"
version = "0.28.1"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>", "Andreas Kurth <akurth@iis.ee.ethz.ch>", "Michael Rogenmoser <michael@rogenmoser.us>"]
repository = "https://github.com/pulp-platform/bender"
description = "A dependency management tool for hardware projects."
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.9"
serde_json = "1"

futures = "0.3"
tokio = { version = "1.27", features = ["full"] }
async-recursion = "1.0"

clap = { version = "4.0", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
blake2 = "0.10"
typed-arena = "2"
dirs = "5"
pathdiff = "0.2"
common-path = "1.0.0"
itertools = "0.12"
is-terminal = "0.4"
tabwriter = "1.2.1"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3.5"
glob = "0.3"
walkdir = "2"
subst = "0.3"
tera = "1.19"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.4"
