[package]
name = "bender"
version = "0.29.1"
authors = [
  "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>",
  "Andreas Kurth <akurth@iis.ee.ethz.ch>",
  "Michael Rogenmoser <michael@rogenmoser.us>",
]
repository = "https://github.com/pulp-platform/bender"
description = "A dependency management tool for hardware projects."
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"
rust-version = "1.85.1"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"

futures = "0.3"
tokio = { version = "1.27", features = ["full"] }
async-recursion = "1.0"

clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.0"
semver = { version = "1.0", features = ["serde"] }
blake2 = "0.10"
typed-arena = "2"
dirs = "6"
pathdiff = "0.2"
itertools = "0.14"
tabwriter = "1.2.1"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3.5"
glob = "0.3"
walkdir = "2"
subst = "0.3"
tera = "1.19"
miette = "7.6.0"
thiserror = "2.0.18"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
indicatif = "0.18.3"
regex = "1.12.2"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.4"

[dev-dependencies]
assert_cmd = "2.1.1"
pretty_assertions = "1.4"
