[package]
name = "bender"
version = "0.31.0"
authors = [
  "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>",
  "Andreas Kurth <akurth@iis.ee.ethz.ch>",
  "Michael Rogenmoser <michael@rogenmoser.us>",
]
repository = "https://github.com/pulp-platform/bender"
description = "A dependency management tool for hardware projects."
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2024"
# 1.91.1 matches Grafeo's MSRV.
rust-version = "1.91.1"

[workspace]
members = [
    "crates/bender-slang",
    "crates/bender-kg-models",
    "crates/bender-kg-extract",
    "crates/bender-kg-store",
    "crates/bender-kg-similarity",
    "crates/bender-kg-core",
    "crates/bender-kg-mcp",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
miette = "7.6.0"
log = "0.4"
sha2 = "0.10"
clap = { version = "4.0", features = ["derive", "env"] }
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
tokio = { version = "1.27", features = ["macros", "rt", "rt-multi-thread"] }
# Embedded graph + vector + text store. The `embedded` profile bakes in
# the LPG model + GQL parser + HNSW vectors + BM25 text index + algos +
# parallel execution + single-file `.grafeo` storage; we add `cypher` for
# our query strings and `wal` for crash-safe writes. We use a path dep
# to the vendored Grafeo checkout next to the workspace.
grafeo = { path = "../grafeo/crates/grafeo", default-features = false, features = ["embedded", "cypher", "wal"] }
grafeo-common = { path = "../grafeo/crates/grafeo-common" }
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
schemars = "1"
bender-slang = { path = "crates/bender-slang", version = "0.1.0" }
bender-kg-models = { path = "crates/bender-kg-models", version = "0.1.0" }
bender-kg-extract = { path = "crates/bender-kg-extract", version = "0.1.0" }
bender-kg-store = { path = "crates/bender-kg-store", version = "0.1.0" }
bender-kg-similarity = { path = "crates/bender-kg-similarity", version = "0.1.0" }
bender-kg-core = { path = "crates/bender-kg-core", version = "0.1.0" }
bender-kg-mcp = { path = "crates/bender-kg-mcp", version = "0.1.0" }

[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
bender-slang = { version = "0.1.0", path = "crates/bender-slang", optional = true }
bender-kg-core = { version = "0.1.0", path = "crates/bender-kg-core", optional = true }
bender-kg-extract = { version = "0.1.0", path = "crates/bender-kg-extract", optional = true }
bender-kg-similarity = { version = "0.1.0", path = "crates/bender-kg-similarity", optional = true }
bender-kg-mcp = { version = "0.1.0", path = "crates/bender-kg-mcp", optional = true }
bender-kg-models = { version = "0.1.0", path = "crates/bender-kg-models", optional = true }

serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"

futures = "0.3"
tokio = { version = "1.27", features = ["full"] }
async-recursion = "1.0"

clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.0"
semver = { version = "1.0", features = ["serde"] }
blake2 = "0.10"
typed-arena = "2"
dirs = "6"
pathdiff = "0.2"
itertools = "0.14"
tabwriter = "1.2.1"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3.5"
glob = "0.3"
walkdir = "2"
subst = "0.3"
tera = "1.19"
miette = "7.6.0"
thiserror = "2.0.18"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
indicatif = "0.18.3"
regex = "1.12.2"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }

[target.'cfg(windows)'.dependencies]
dunce = "1.0.4"

[dev-dependencies]
assert_cmd = "2.1.1"
pretty_assertions = "1.4"

[features]
default = ["slang"]
slang = [
    "dep:bender-slang",
    "dep:bender-kg-core",
    "dep:bender-kg-extract",
    "dep:bender-kg-similarity",
    "dep:bender-kg-mcp",
    "dep:bender-kg-models",
]
