[package]
name = "bender-kg-extract"
version = "0.1.0"
edition = "2024"
description = "Internal bender crate: SystemVerilog -> kg.v1 extraction pipeline"
license = "Apache-2.0"
authors = ["Alessandro Ottaviano <aottaviano@tenstorrent.com>"]

[dependencies]
bender-kg-models = { workspace = true }
bender-slang = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3.5"

[package.metadata.dist]
dist = false
