[package]
name = "bender-resolve"
version = "0.1.0"
edition = "2024"
description = "PubGrub-based dependency resolver for the bender hardware package manager"
license = "Apache-2.0 OR MIT"
authors = ["Tim Fischer <fischeti@iis.ee.ethz.ch>"]
repository = "https://github.com/pulp-platform/bender"

[dependencies]
pubgrub = "0.3.0"
semver = { version = "1.0", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
log = "0.4"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1.4"
