[package]
name = "bender-slang"
version = "0.1.0"
edition = "2024"
description = "Internal bender crate: Rust bindings for the Slang SystemVerilog parser"
license = "Apache-2.0"
authors = ["Tim Fischer <fischeti@iis.ee.ethz.ch>"]
repository = "https://github.com/pulp-platform/bender"
readme = "README.md"
include = [
  "src/**",
  "cpp/**",
  "!cpp/compile_flags.txt",
  "tests/**",
  "CMakeLists.txt",
  "build.rs",
  "README.md",
]

[dependencies]
# Kuzu (used by bender-kg-store-kuzu) hard-pins `cxx = =1.0.138`.
# Keep both bender-slang and kuzu on the same cxx to avoid duplicate
# C++ runtime symbols / version conflicts.
cxx = "=1.0.138"
thiserror = "2.0.12"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.4"

[build-dependencies]
cmake = "0.1.57"
cxx-build = "=1.0.138"

[package.metadata.dist]
dist = false
